--- a/css/common.css
+++ b/css/common.css
@@ -1,16 +1,20 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  padding: 0 30px;
+  font-size: larger;
 }
 
 input {
@@ -21,4 +25,54 @@ input {
 button {
   padding: 8px 12px;
   cursor: pointer;
+}
+
+.link {
+  display: inline-block;
+  text-decoration: none;
+  padding: 2px;
+  color: #212121;
+  border-radius: 3px;
+}
+
+.link:hover {
+  background-color: #cccaca;
+}
+
+.link:visited {
+  color: #02a00f;
+}
+
+.link_back {
+  margin-bottom: 30px;
+}
+
+.gallery {
+  display: flex;
+  list-style-type: none;
+  gap: 30px;
+}
+
+.gallery__item {
+  flex-basis: calc((100% - 60px) / 3);
+  height: 330px;
+}
+
+.gallery__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+#boxes {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
